feat: student modal style + syllabus web link in dashboard

--- a/assets/scss/student_view.scss
+++ b/assets/scss/student_view.scss
@@ -403,3 +403,14 @@
     }
   }
 }
+
+.modal-student {
+  & .modal-content {
+    background-color: #000a10;
+    color: #f8f9fa;
+    border: solid 1px #f8f9fa;
+    & .close {
+      color: #f8f9fa;
+    }
+  }
+}
