--- a/templates/modal/EcueListUe.html.twig
+++ b/templates/modal/EcueListUe.html.twig
@@ -1,4 +1,4 @@
-<div class="modal fade" id="EcueListUeModal" tabindex="-1" role="dialog"
+<div class="modal modal-student fade" id="EcueListUeModal" tabindex="-1" role="dialog"
      aria-hidden="true" data-backdrop="static">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
@@ -17,8 +17,8 @@
                         {% endfor %}
                     </ul>
                 </div>
-                <div class="d-flex">
-                    <button class="btn btn-success" data-dismiss="modal">Fermer</button>
+                <div class="mt-4 text-center">
+                    <button class="btn btn-primary" data-dismiss="modal">Fermer</button>
                 </div>
             </div>
         </div>
