--- a/templates/modal/PublicContent.html.twig
+++ b/templates/modal/PublicContent.html.twig
@@ -25,12 +25,9 @@
                         <li>Objectifs du cours</li>
                         <li>Les sections principales du programme détaillé(sans les activités)</li>
                     </ul>
-                    <p>
-                        Vous pouvez voir à quoi ressemble un syllabus sur le site web en cliquant sur l'exemple ci dessous:
-                    </p>
                 </div>
                 <div class="mt-4">
-                    <button class="btn btn-primary">Voir un exemple de syllabus public</button>
+                    <button class="btn btn-primary" data-dismiss="modal">J'ai compris</button>
                 </div>
             </div>
         </div>
