--- a/templates/modal/EcueListUeLight.html.twig
+++ b/templates/modal/EcueListUeLight.html.twig
@@ -1,4 +1,4 @@
-<div class="modal modal-student fade" id="EcueListUeModal" tabindex="-1" role="dialog"
+<div class="modal fade" id="EcueListUeModalLight" tabindex="-1" role="dialog"
      aria-hidden="true" data-backdrop="static">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
