--- a/assets/scss/light_version.scss
+++ b/assets/scss/light_version.scss
@@ -127,7 +127,7 @@
 
       .presentation-info-element {
         display: flex;
-        align-items: start;
+        align-items: flex-start;
         margin: 1rem 0;
 
         .presentation-info-element-text {
