--- a/assets/scss/student_view.scss
+++ b/assets/scss/student_view.scss
@@ -296,7 +296,7 @@
         .student-section-header {
           padding: 0.7rem;
           display: flex;
-          justify-content: start;
+          justify-content: flex-start;
           cursor: pointer;
 
           .student-section-title {
