--- a/templates/modal/FillingHelpSyllabus.html.twig
+++ b/templates/modal/FillingHelpSyllabus.html.twig
@@ -11,7 +11,7 @@
             <div class="modal-body">
                 <div>
                     <h5>Conseil technique</h5>
-                    <p>Cette application a été dessiné pour une résolution d'écran de 1024x768 pixels et plus.</p>
+                    <p>Cette application a été dessinée pour une résolution d'écran de 1024x768 pixels et plus.</p>
                     <p>Nous vous recommandons d'utiliser les navigateurs Chrome ou Firefox afin de profiter d'une
                         experience d'utilisation optimale.</p>
                 </div>
