--- a/templates/modal/RestrictedContent.html.twig
+++ b/templates/modal/RestrictedContent.html.twig
@@ -11,7 +11,7 @@
             <div class="modal-body">
                 <div>
                     <p>Le contenu restreint correspond aux informations visibles uniquement par les étudiants inscrits à l'Université.</p>
-                    <p>Lorsque votre syllabus est publié, ces informations ne seront donc pas affiché sur le site web de l'université, notamment sur l'offre de formation.</p>
+                    <p>Lorsque votre syllabus est publié, ces informations ne seront donc pas affichées sur le site web de l'université, notamment sur l'offre de formation.</p>
                 </div>
                 <div class="mt-4">
                     <button class="btn btn-primary" data-dismiss="modal">J'ai compris</button>
