--- a/templates/modal/PublicContent.html.twig
+++ b/templates/modal/PublicContent.html.twig
@@ -11,19 +11,19 @@
             <div class="modal-body">
                 <div>
                     <p>
-                        Le contenu public correspond aux informations visibles par tous, y compris des personnes extérieurs à l'université.</p>
+                        Le contenu public correspond aux informations visibles par tous, y compris par les personnes extérieurs à l'université.</p>
                     <p>
-                        Lorsque votre syllabus est publié, une partie d'informations est utilisé pour l'afficher sur le site web de l'université, notamment sur l'offre de formation. </p>
+                        Lorsque votre syllabus est publié, une partie des informations est utilisée pour l'affichage sur le site web de l'université, notamment sur l'offre de formation. </p>
                     <p>
                         Voici les informations principales qui se retrouvent sur le syllabus "public":
                     </p>
                     <ul>
-                        <li>Présentation générale(structure, niveau, semestre, domaine, langue, description, image ou vidéo)</li>
-                        <li>Nom du responsable du cours(et pas la liste de tous les enseignants</li>
+                        <li>Présentation générale (structure, niveau, semestre, domaine, langue, description, image ou vidéo)</li>
+                        <li>Nom du responsable du cours (et pas la liste de tous les enseignants</li>
                         <li>Nombre d'heure et modalité d'enseignement</li>
-                        <li>Prérequis(sans les remédiations)</li>
+                        <li>Prérequis (sans les remédiations)</li>
                         <li>Objectifs du cours</li>
-                        <li>Les sections principales du programme détaillé(sans les activités)</li>
+                        <li>Les sections principales du programme détaillé (sans les activités)</li>
                     </ul>
                 </div>
                 <div class="mt-4">
