feat: translation student view

--- a/templates/course_info/view/view.html.twig
+++ b/templates/course_info/view/view.html.twig
@@ -41,45 +41,33 @@
                     {% endif %}
                 {% endif %}
                 <h3 class="my-5 text-left text-primary">
-                    {{ 'app.view.student.presentation.support_for_success' | trans }}
+                    {{ 'app.view.student.footer.support_for_success' | trans }}
                 </h3>
                 <ul>
                     <li>
-                        <a href="https://univ-cotedazur.fr/tuttop" class="text-blue" target="_blank">
-                            TUT'TOP
-                        </a>&nbsp;: du tutorat par les pairs sur le plan méthodologique, social, administratif ou logistique
+                        {{ 'app.view.student.footer.tuttop' | trans | raw }}
                     </li>
                     <li>
-                        <a href="https://ecriplus.fr/" class="text-blue" target="_blank">
-                            écri+
-                        </a> : pour améliorer son francais écrit
+                        {{ 'app.view.student.footer.ecri+' | trans | raw }}
                     </li>
                     <li>
-                        <a href="https://univ-cotedazur.fr/portails/staps/scolarite/organisation-des-etudes/centres-de-ressources-en-langues" class="text-blue" target="_blank">
-                            Centre de ressources en langues
-                        </a>&nbsp;: développer ses compétences en langues vivantes, française ou étrangères
+                        {{ 'app.view.student.footer.languages_resources_center' | trans | raw }}
                     </li>
                     <li>
-                        <a href="https://bu.univ-cotedazur.fr/fr/se-former/metoda" class="text-blue" target="_blank">
-                            METODA
-                        </a>&nbsp;: pour booster ses compétences informationnelles
+                        {{ 'app.view.student.footer.metoda' | trans | raw }}
                     </li>
                     <li>
-                        <a href="https://univ-cotedazur.fr/universite/responsabilite-ethique-et-universitaire/handicap" class="text-blue" target="_blank">
-                            Cellule Handicap
-                        </a>&nbsp;: découvrir les aides proposées pour les étudiants en situation de handicap
+                        {{ 'app.view.student.footer.handicaped_cell' | trans | raw }}
                     </li>
                     <li>
-                        <a href="https://univ-cotedazur.fr/portails/portail-sciences-et-technologies/scolarite/sorienter-se-reorienter/sorienter-se-reorienter" class="text-blue" target="_blank">
-                            S'orienter ou se réorienter
-                        </a>&nbsp;: être accompagné dans les BIO
+                        {{ 'app.view.student.footer.orient_or_reorient' | trans | raw }}
                     </li>
                     <li>
-                        <a href="https://univ-cotedazur.fr/formation/scolarite/evaluation-des-enseignements-et-des-formations" class="text-blue" target="_blank">
-                            Maison de l'évaluation
-                        </a>&nbsp;: évaluer ses enseignements à la fin de chaque semestre
+                        {{ 'app.view.student.footer.evaluation_house' | trans | raw }}
                     </li>
-                    <li>Université Numérique thématique</li>
+                    <li>
+                        {{ 'app.view.student.footer.university_numeric_thematic' | trans | raw }}
+                    </li>
                 </ul>
 
                 <div class="text-muted text-center pb-5">
