fix: typo in syllabus dashboard modal

--- a/templates/modal/PublicContent.html.twig
+++ b/templates/modal/PublicContent.html.twig
@@ -11,7 +11,7 @@
             <div class="modal-body">
                 <div>
                     <p>
-                        Le contenu public correspond aux informations visibles par tous, y compris par les personnes extérieurs à l'université.</p>
+                        Le contenu public correspond aux informations visibles par tous, y compris par les personnes extérieures à l'université.</p>
                     <p>
                         Lorsque votre syllabus est publié, une partie des informations est utilisée pour l'affichage sur le site web de l'université, notamment sur l'offre de formation. </p>
                     <p>
