feat: display sections without activities in student view

--- a/assets/scss/student_view.scss
+++ b/assets/scss/student_view.scss
@@ -313,7 +313,7 @@
           }
 
 
-          &.collapsed > .collapse-button {
+          &.collapsed .collapse-button {
             transform: rotate(-180deg);
           }
         }
